рабочая версия 1.0